--- a/22_deep_reinforcement_learning/01_gridworld_dynamic_programming.ipynb
+++ b/22_deep_reinforcement_learning/01_gridworld_dynamic_programming.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.458379Z",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.461605Z",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.471257Z",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.480216Z",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.488588Z",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.501520Z",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.514770Z",
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.522796Z",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.533539Z",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.556370Z",
@@ -257,7 +257,7 @@
        " 'L': {'D': 0.1, 'L': 0.8, 'U': 0.1, 'R': 0}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.568063Z",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.581908Z",
@@ -329,7 +329,7 @@
        "       -0.02, -0.02, -0.02])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.589775Z",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.599667Z",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.608614Z",
@@ -412,7 +412,7 @@
        "((4, 12, 12), (4, 12, 12))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.617034Z",
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.629694Z",
@@ -477,10 +477,10 @@
     {
      "data": {
       "text/plain": [
-       "'# Iterations: 31 | Time: 0.0006'"
+       "'# Iterations: 31 | Time: 0.0023'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.641404Z",
@@ -565,7 +565,7 @@
        "2  U  L  L  L"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.652654Z",
@@ -645,7 +645,7 @@
        "2  0.808345  0.773328  0.736099  0.516083"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.716943Z",
@@ -682,10 +682,10 @@
     {
      "data": {
       "text/plain": [
-       "'# Iterations: 7 | Time: 0.0560'"
+       "'# Iterations: 7 | Time: 0.0284'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.726528Z",
@@ -777,7 +777,7 @@
        "2  U  L  L  L"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.737898Z",
@@ -857,7 +857,7 @@
        "2  0.808345  0.773328  0.736099  5.160828e-01"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.746078Z",
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.754465Z",
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.763120Z",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.774651Z",
@@ -946,10 +946,10 @@
     {
      "data": {
       "text/plain": [
-       "'# Iterations 24 | Time 0.0023'"
+       "'# Iterations 20 | Time 0.0047'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.784869Z",
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.793712Z",
@@ -1021,7 +1021,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.802251Z",
@@ -1054,7 +1054,7 @@
        "array([2, 2, 2, 0, 1, 0, 0, 0, 1, 0, 0, 0])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.814636Z",
@@ -1137,7 +1137,7 @@
        "2  U  L  L  L"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.827609Z",
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.848053Z",
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.865229Z",
@@ -1213,10 +1213,10 @@
     {
      "data": {
       "text/plain": [
-       "'# Iterations 3 | Time 0.0009'"
+       "'# Iterations 4 | Time 0.0050'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.875788Z",
@@ -1301,7 +1301,7 @@
        "      <th>2</th>\n",
        "      <td>U</td>\n",
        "      <td>L</td>\n",
-       "      <td>L</td>\n",
+       "      <td>U</td>\n",
        "      <td>L</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1312,10 +1312,10 @@
        "   0  1  2  3\n",
        "0  R  R  R  L\n",
        "1  U  L  U  L\n",
-       "2  U  L  L  L"
+       "2  U  L  U  L"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-25T05:53:53.887239Z",
@@ -1365,24 +1365,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.756333</td>\n",
-       "      <td>0.882232</td>\n",
-       "      <td>0.933790</td>\n",
+       "      <td>0.777382</td>\n",
+       "      <td>0.904279</td>\n",
+       "      <td>0.946438</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.683594</td>\n",
+       "      <td>0.691717</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.480169</td>\n",
+       "      <td>0.557271</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.612364</td>\n",
-       "      <td>0.552599</td>\n",
-       "      <td>0.506767</td>\n",
-       "      <td>0.307299</td>\n",
+       "      <td>0.600112</td>\n",
+       "      <td>0.520820</td>\n",
+       "      <td>0.479323</td>\n",
+       "      <td>0.275713</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1390,12 +1390,12 @@
       ],
       "text/plain": [
        "          0         1         2         3\n",
-       "0  0.756333  0.882232  0.933790  0.000000\n",
-       "1  0.683594  0.000000  0.480169  0.000000\n",
-       "2  0.612364  0.552599  0.506767  0.307299"
+       "0  0.777382  0.904279  0.946438  0.000000\n",
+       "1  0.691717  0.000000  0.557271  0.000000\n",
+       "2  0.600112  0.520820  0.479323  0.275713"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,11 +1403,25 @@
    "source": [
     "pd.DataFrame(V.reshape(grid_size))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1421,7 +1435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.14"
   },
   "toc": {
    "base_numbering": 1,
